# package-pydantic-patch

./: .gitignore  README.md  fix.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
docs/: PROMPT.md  REQUIREMENTS.md  TESTING.md
examples/: pydantic_discriminated_union_api_schema.py  sqlmodel_api_schema.py
src/ab_core/pydantic_patch/: __init__.py  orm_clone.py  orm_dump.py  orm_load.py  orm_patch.py  pydantic_jsonb.py
src/ab_core/pydantic_patch/core/: __init__.py  cache.py  classproperty.py  computed_field_type_hints.py  config.py  errors.py  field_type_hints.py  fields.py  forward_references.py  operation.py  orm_type_hints.py  payload.py  payload_types.py  transform.py  type_hints.py  types.py
src/ab_core/pydantic_patch/null/: __init__.py  api.py  config.py  operation.py
src/ab_core/pydantic_patch/omit/: __init__.py  api.py  config.py  operation.py
src/ab_core/pydantic_patch/partial/: __init__.py  api.py  config.py  operation.py
src/ab_core/pydantic_patch/patch/: __init__.py  api.py  config.py  operation.py
src/ab_core/pydantic_patch/pick/: __init__.py  api.py  config.py  operation.py
src/ab_core/pydantic_patch/required/: __init__.py  api.py  config.py  operation.py
tests/ab_core/pydantic_patch/: conftest.py  conftest_sqlmodel_relationships.py  test_computed_fields.py  test_forward_relationships_not_supported.py  test_orm_clone.py  test_orm_dump.py  test_orm_load.py  test_orm_patch.py  test_orm_patch_forward_references.py  test_type_hints.py
tests/ab_core/pydantic_patch/test_null/: test_null_computed_fields.py  test_null_cyclic_sqlmodel_relationships.py  test_null_forward_references.py  test_null_recursive.py  test_null_simple.py  test_null_sqlmodel_relationships.py
tests/ab_core/pydantic_patch/test_omit/: test_omit_computed_fields.py  test_omit_discriminated_union.py  test_omit_forward_references.py  test_omit_recursive.py  test_omit_simple.py  test_omit_sqlmodel_relationships.py  test_recursive_quote_line_item_children.py
tests/helpers/: assert_model.py
(+58 files in other folders)
